# qgs_differentiable

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: create_tendencies_nonfixed_params.py  symbolic_output_ocean_atmosphere.ipynb  tendencies_nonfixed_params.py
configs/ic/: de_cruz_active_ic.npy
docs/agent/: agent_log.md  implementation.md  parameter-dependence.md  symbolic-tendency-to-jax-plan.md  validation.md
docs/model/: maooam_qgs_context.md
notebooks/: parameter_recovery.ipynb  tendency_demo.ipynb  trajectory_validation.ipynb
scripts/: run_standard_qgs.py
src/dqgs/: __init__.py  estimate.py  initial_condition.py  integrate.py  tendency_py2jax.py
tests/: conftest.py  test_estimate.py  test_initial_condition.py  test_tendency.py  test_trajectory.py
