[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dqgs"
version = "0.1.0"
description = "Differentiable JAX implementation of a fixed qgs MAOOAM configuration"
requires-python = ">=3.11"
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "optax",
  "scipy",
  "sympy",
  "typer",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
